--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Heart Disease</title>
-       <link rel="stylesheet"  href="Styles.css">
-        <script type="text/javascript" src="d3/d3.v3.js">        
-        </script>
-    </head>
-    <body>
-       <div id="full-page">
-           <br/><br/>
-           <div id="pieDiv">
-            <label style="font-size: small;">Percentage Of Population Having Heart Disease By</label><select id="selectAgeGender"></select>
-            
-           </div>			
-       	</div>
-        <div id="tooltip" class="hidden">			
-        <p><span id="value">100</span></p>
-        </div> 
-        <script src="http://localhost:8080/visualManager.js"></script>
-        <script src="http://localhost:8080/loadCharts.js"></script>
-        <script src="http://localhost:8080/common.js"></script>
-        <script src="http://localhost:8080/pie.js"></script>
-    </body>
+<meta charset='utf-8'>
+<html>
+  <head>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <link rel='stylesheet' href='style.css'>
+  </head>
+  <body>
+    <script type='text/javascript' src='script.js'></script>
+  </body>
 </html>
