--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<meta charset='utf-8'>
-<html>
-  <head>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <link rel='stylesheet' href='style.css'>
-  </head>
-  <body>
-    <script type='text/javascript' src='script.js'></script>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Heart Disease</title>
+       <link rel="stylesheet"  href="Styles.css">
+        <script type="text/javascript" src="d3/d3.v3.js">        
+        </script>
+    </head>
+    <body>
+       <div id="full-page">
+			
+       	</div>
+        <script src="visualManager.js"></script>
+    </body>
 </html>
