--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
        <div id="full-page">
-			
+        <div id="menu" class ="menu">  
+			<a href="PC_test.html">ParallelCoordinates</a>
+        </div>
        	</div>
         <script src="visualManager.js"></script>
     </body>
